syntax = "proto3";
package health;
option go_package = "/health";

message HealthCheckInput {
  string name = 1;
}

message HealthCheckOutput {
  string message = 1;
}

service HealthCheck {
  rpc Check(HealthCheckInput) returns (HealthCheckOutput);
}